# rustc-rayon

./: Cargo.toml
rayon-core/: Cargo.toml  README.md
rayon-core/src/: job.rs  lib.rs  registry.rs  worker_local.rs
rayon-core/src/join/: mod.rs
rayon-core/src/scope/: mod.rs
rayon-core/src/sleep/: README.md  mod.rs
rayon-core/src/spawn/: mod.rs
rayon-core/src/thread_pool/: mod.rs
rayon-demo/: Cargo.toml
src/: range.rs
src/iter/: enumerate.rs
