[package]
name = "rustc-rayon"
# Reminder to update html_rool_url in lib.rs when updating version
version = "0.4.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>",
           "Josh Stone <cuviper@gmail.com>"]
description = "Simple work-stealing parallelism for Rust - fork for rustc"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/rustc-rayon"
documentation = "https://docs.rs/rustc-rayon/"
readme = "README.md"
keywords = ["parallel", "thread", "concurrency", "join", "performance"]
categories = ["concurrency"]
exclude = ["/ci/*", "/scripts/*", "/.github/*", "/bors.toml"]

[workspace]
members = ["rayon-core"]
exclude = ["ci"]

[dependencies]
rayon-core = { version = "0.4", path = "rayon-core", package = "rustc-rayon-core" }
crossbeam-deque = "0.8.1"

# This is a public dependency!
[dependencies.either]
version = "1.0"
default-features = false

[dev-dependencies]
docopt = "1"
lazy_static = "1"
rand = "0.8"
rand_xorshift = "0.3"

[dev-dependencies.serde]
version = "1.0.85"
features = ["derive"]

[build-dependencies]
autocfg = "1"
