[package]
name = "rustc-rayon"
# Reminder to update html_rool_url in lib.rs when updating version
version = "0.3.1"
authors = ["Niko Matsakis <niko@alum.mit.edu>",
           "Josh Stone <cuviper@gmail.com>"]
description = "Simple work-stealing parallelism for Rust - fork for rustc"
edition = "2018"
license = "Apache-2.0/MIT"
repository = "https://github.com/rust-lang/rustc-rayon"
documentation = "https://docs.rs/rustc-rayon/"
readme = "README.md"
keywords = ["parallel", "thread", "concurrency", "join", "performance"]
categories = ["concurrency"]
exclude = ["/ci/*", "/scripts/*", "/.travis.yml", "/appveyor.yml", "/bors.toml"]

[workspace]
members = ["rayon-core"]
exclude = ["ci"]

[dependencies]
rayon-core = { version = "0.3", path = "rayon-core", package = "rustc-rayon-core" }
crossbeam-deque = "0.8.0"

# This is a public dependency!
[dependencies.either]
version = "1.0"
default-features = false

[dev-dependencies]
docopt = "1"
lazy_static = "1"
rand = "0.7"
rand_xorshift = "0.2"
doc-comment = "0.3"

[dev-dependencies.serde]
version = "1.0.85"
features = ["derive"]
